# textOCR

./: app.py  main.py  pyproject.toml  results.html  upload.js
static/css/: custom.css
templates/: index.html  results.html
